# kdl_parser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_requirements.sh  package.xml  requirements.txt  setup.py
config/: main.yaml
highlevel_planning/: CMakeLists.txt  package.xml  setup.py
highlevel_planning/config/: main.yaml  mcts.yaml
highlevel_planning/data/models/: box_panda_hand.urdf.xacro  box_panda_hand_pb.urdf  parse_xacros.bash  tall_box.urdf
highlevel_planning/data/models/container/: container_no_lid.urdf  container_sliding_lid.urdf  lid.urdf
highlevel_planning/data/models/cupboard2/: cupboard2.urdf  cupboard2.urdf.xacro
highlevel_planning/data/models/cupboard_drawers/: cupboard_drawers.urdf
highlevel_planning/data/models/shelf/: shelf.urdf  shelf.urdf.xacro
highlevel_planning/knowledge/examples/: readme.md
highlevel_planning/launch/: display.launch
highlevel_planning/msg/: HlpGuiCommand.msg
highlevel_planning/notebooks/: boosting.ipynb  inspect_predicate_data.ipynb  modify_domain.ipynb  plot_mcts_tree.ipynb  probability_distributions.ipynb  report_reader.ipynb
highlevel_planning/scripts/: evaluate_repeated.py  gui.py  modify_domain.ipynb  pb_save_world.py  rlbench_playground.ipynb  run_auto.py  run_manually.py  run_mcts.py  run_predicate_learning.py  run_repeated.py  run_rlbench.py  run_show_urdfs.py
highlevel_planning/src/highlevel_planning/execution/: es_sequential_execution.py
highlevel_planning/src/highlevel_planning/knowledge/: knowledge_base.py  predicates.py
highlevel_planning/src/highlevel_planning/learning/: explorer.py  logic_tools.py  pddl_extender.py  precondition_discovery.py  predicate_learning.py  sequence_completion.py
highlevel_planning/src/highlevel_planning/pddl_interface/: pddl_file_if.py  planner_interface.py
highlevel_planning/src/highlevel_planning/sim/: cupboard.py  robot_arm.py  scene_base.py  scene_planning_1.py  world.py
highlevel_planning/src/highlevel_planning/skills/: grasping.py  move.py  navigate.py  pddl_descriptions.py  placing.py
highlevel_planning/src/playground/: bt_chooser.py
highlevel_planning/srv/: Snapshot.srv
highlevel_planning/test/: test_learning.py  test_pddl_interface.py  test_predicates.py  test_robot_arm.py
highlevel_planning/test/support/: fake_predicates.py  fake_problem.py  scene_test_1.py
ros1_packages/highlevel_planning_ros1/: CMakeLists.txt  package.xml  setup.py
ros1_packages/highlevel_planning_ros1/highlevel_planning_ros1/: gui.py  run_predicate_learning.py
ros2_packages/highlevel_planning_ros2/: package.xml  setup.cfg  setup.py
ros2_packages/highlevel_planning_ros2/config/: predicate_learning.yaml
ros2_packages/highlevel_planning_ros2/highlevel_planning_ros2/: gui.py  run_predicate_learning.py
ros2_packages/highlevel_planning_ros2/launch/: predicate_learning.launch.py
(+154 files in other folders)
